# facetrak

./: .gitignore  README.md  facetracker.ino  facetrak.db  justfile  pyproject.toml
.agents/skills/facetrak-mcp/: SKILL.md
docs/: DEVELOPER.md  MCP_API.md
facetrak/: __init__.py  __main__.py  age_gender.py  analysis.py  api.py  config.py  crowd.py  db.py  detection.py  engine.py  events.py  facedb.py  heatmap.py  liveness.py  mcp_server.py  notifier.py  pose.py  quality.py  recorder.py  servo.py  simulation.py  stats.py  tracker.py  ui.py
facetrak/ai/: __init__.py  gestures.py  objects.py  pose.py
facetrak/analysis/: __init__.py  face.py  liveness.py
facetrak/camera/: __init__.py  base.py  onvif.py  picamera.py  rtsp.py  usb.py  zoom.py
facetrak/core/: __init__.py  config.py  engine.py
facetrak/hardware/: __init__.py  recorder.py  servo.py
facetrak/models/: __init__.py  analysis.py  detection.py  track.py
facetrak/recog/: __init__.py  age_gender.py  facedb.py  quality.py  tracker.py  yunet.py
facetrak/sensors/: __init__.py  audio.py  depth.py  pir.py
facetrak/servers/: __init__.py  mcp.py  rest.py
facetrak/storage/: __init__.py  crowd.py  db.py  stats.py
facetrak/utils/: notifier.py
facetrak/viz/: __init__.py  heatmap.py  overlay.py  simulation.py  theme.py  ui.py
facetrak/viz/components/: __init__.py  base_panel.py  button.py  command_bar.py  sidebar.py  status_bar.py  video_panel.py
tests/ai/: test_gestures.py
tests/camera/: test_from_config.py  test_zoom.py
tests/sensors/: test_sensors.py
