[project]
name = "facetrak"
version = "0.2.0"
description = "Real-time face detection, recognition and tracking with OpenCV and MediaPipe"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.13.0.92",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pyserial>=3.5",
    "mcp>=1.27.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
facetrak = "facetrak.__main__:main"
facetrak-mcp = "facetrak.mcp_server:run"

[tool.setuptools.packages.find]
include = ["facetrak*"]

[tool.jupyter]
allowed = false

[tool.uv]
package = true
