[project]
name = "facetrak"
version = "0.2.0"
description = "Real-time face detection, recognition and tracking with OpenCV and MediaPipe"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.13.0.92",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pyserial>=3.5",
    "mcp>=1.27.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# Raspberry Pi Camera Module (libcamera-based) — Linux only
pi = ["picamera2>=0.3; sys_platform == 'linux'"]
# ONVIF PTZ IP cameras
onvif = ["onvif-zeep>=0.2.12"]
# YOLO object detection
yolo = ["ultralytics>=8.0"]
# Microphone audio events
audio = ["sounddevice>=0.4"]
# All optional hardware support — Linux-only deps marked
hardware = ["picamera2>=0.3; sys_platform == 'linux'",
            "onvif-zeep>=0.2.12",
            "RPi.GPIO>=0.7; sys_platform == 'linux'"]
# Full AI suite
ai = ["ultralytics>=8.0"]
# Everything — Linux-only deps marked
full = ["picamera2>=0.3; sys_platform == 'linux'",
        "onvif-zeep>=0.2.12",
        "RPi.GPIO>=0.7; sys_platform == 'linux'",
        "sounddevice>=0.4", "ultralytics>=8.0"]

[project.scripts]
facetrak = "facetrak.__main__:main"
facetrak-mcp = "facetrak.servers.mcp:run"
facetrak-api = "facetrak.servers.rest:run"

[tool.setuptools.packages.find]
include = ["facetrak*"]

[tool.jupyter]
allowed = false

[tool.uv]
package = true

# python-prctl (pulled in by picamera2) only builds on Linux; provide static
# metadata so cross-platform lock resolution doesn't try to build its sdist.
[[tool.uv.dependency-metadata]]
name = "python-prctl"
version = "1.8.1"
requires-dist = []
